--- a/public/admin.html
+++ b/public/admin.html
@@ -90,6 +90,10 @@
                     <div class="icon-wrapper" style="color: #AC87C5;"><i class="fa-solid fa-gavel"></i></div>
                     <span>Аукционы</span>
                 </div>
+                  <div class="admin-icon-button" data-view="view-admin-weekly-goals">
+                        <div class="icon-wrapper" style="color: #FFC107;"><i class="fa-solid fa-calendar-week"></i></div>
+                        <span>Недельный Забег</span>
+                    </div>
                 </div> </div> <div class="quest-card" style="margin-top: 20px; text-align: center;">
                 <p style="font-size: 14px; color: var(--text-color-muted); margin:0;">
                     Панель для администратирования канала HATElove.ttv.
@@ -302,6 +306,10 @@
                     <div class="setting-item">
                         <span class="setting-label">Система Чекпоинта</span>
                         <label class="toggle-switch"><input type="checkbox" id="setting-checkpoint-enabled"><span class="toggle-slider"></span></label>
+                    </div>
+                    <div class="setting-item">
+                        <span class="setting-label">Недельный Забег</span>
+                        <label class="toggle-switch"><input type="checkbox" id="setting-weekly-goals-enabled"><span class="toggle-slider"></span></label>
                     </div>
                 </div>
             </div>
