--- a/public/admin.html
+++ b/public/admin.html
@@ -92,7 +92,7 @@
                 </div>
                   <div class="admin-icon-button" data-view="view-admin-weekly-goals">
                         <div class="icon-wrapper" style="color: #FFC107;"><i class="fa-solid fa-calendar-week"></i></div>
-                        <span>Недельный Забег</span>
+                        <span>Недельные испытания</span>
                     </div>
                 </div> </div> <div class="quest-card" style="margin-top: 20px; text-align: center;">
                 <p style="font-size: 14px; color: var(--text-color-muted); margin:0;">
