--- a/public/admin.html
+++ b/public/admin.html
@@ -272,6 +272,10 @@
                             <label for="setting-auction-banner-url">URL баннера "Аукцион"</label>
                             <input type="text" id="setting-auction-banner-url" placeholder="https://example.com/auction.png">
                         </div>
+                      <div>
+                            <label for="setting-weekly-goals-banner-url">URL баннера "Недельные испытания"</label>
+                            <input type="text" id="setting-weekly-goals-banner-url" placeholder="https://example.com/weekly.png">
+                        </div>
                     </div>
                 </div>
             </div>
