--- a/public/menu.html
+++ b/public/menu.html
@@ -69,8 +69,12 @@
                 <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
                 <div class="slider-dots"></div>
         </div>
-        <div id="weekly-goals-container-placeholder">
-            </div>
+        <details class="image-accordion" open> <summary class="image-accordion-summary">
+                <img id="weekly-goals-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Недельный Забег" />
+            </summary>
+            <div id="weekly-goals-container-placeholder">
+                </div>
+        </details>
         <div id="challenge-container"></div>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
         <div id="quest-choose-wrapper">
