--- a/public/menu.html
+++ b/public/menu.html
@@ -69,7 +69,7 @@
                 <button id="slide-next-btn" class="slider-arrow next"><i class="fa-solid fa-chevron-right"></i></button>
                 <div class="slider-dots"></div>
         </div>
-        <details class="image-accordion" open> <summary class="image-accordion-summary">
+        <details class="image-accordion" id="weekly-goals-accordion"> <summary class="image-accordion-summary">
                 <img id="weekly-goals-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Недельный Забег" />
             </summary>
             <div id="weekly-goals-container-placeholder">
