--- a/public/menu.html
+++ b/public/menu.html
@@ -70,7 +70,7 @@
                 <div class="slider-dots"></div>
         </div>
         <details class="image-accordion" id="weekly-goals-accordion"> <summary class="image-accordion-summary">
-                <img id="weekly-goals-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Недельный Забег" />
+                <img id="weekly-goals-banner-img" src="https://i.postimg.cc/d0r554hc/1200-600.png?v=2" alt="Недельные испытания" />
             </summary>
             <div id="weekly-goals-container-placeholder">
                 </div>
