--- a/public/admin.html
+++ b/public/admin.html
@@ -851,6 +851,8 @@
                     
                     <label for="weekly-goal-task-title">Название (видит юзер)</label>
                     <input type="text" name="title" id="weekly-goal-task-title" required placeholder="Выполнить 3 челленджа">
+                    <label for="weekly-goal-task-description">Примечание (подзаголовок, необязательно)</label>
+                    <textarea name="description" id="weekly-goal-task-description" rows="2" placeholder="Например: Нужно перейти в раздел Задания и выполнить..."></textarea>
 
                     <label for="weekly-goal-task-type">Тип Задачи (для триггера)</label>
                     <select name="task_type" id="weekly-goal-task-type" required>
