--- a/public/admin.html
+++ b/public/admin.html
@@ -894,6 +894,13 @@
                     
                     <label for="weekly-goal-task-sort-order">Порядок (#)</label>
                     <input type="number" name="sort_order" id="weekly-goal-task-sort-order" value="0">
+                  <div class="setting-item" style="padding: 10px 0 0; border: none;">
+                        <span class="setting-label">✅ Задача Активна</span>
+                        <label class="toggle-switch">
+                            <input type="checkbox" name="is_active" checked>
+                            <span class="toggle-slider"></span>
+                        </label>
+                    </div>
                     
                     <button type="submit">Добавить Задачу</button>
                     <button type="button" id="weekly-goal-cancel-edit-btn" class="admin-action-btn reject hidden" style="margin-top: -5px;">Отмена (сбросить форму)</button>
