--- a/public/admin.html
+++ b/public/admin.html
@@ -338,6 +338,22 @@
              <div class="quest-card" style="margin-top: 20px;">
                 <div class="settings-group">
                     <h3>Опасно</h3>
+                  <div class="admin-form" style="padding-bottom: 15px; border-bottom: 1px solid var(--divider-glass-color);">
+                        <label>Сбросить прогресс "Забега" для 1 пользователя</label>
+                        <p style="font-size: 12px; color: var(--text-color-muted); margin: -10px 0 10px;">
+                            Удаляет прогресс (0/0) только для выбранного пользователя.
+                        </p>
+                        <form id="admin-reset-user-weekly-progress-form" class="hidden admin-sub-form" style="padding-top: 0; margin-top: 0; border-top: none;">
+                            <p>Для: <strong id="admin-reset-user-weekly-progress-user-name">...</strong></p>
+                            <input type="hidden" name="user_id_to_reset_weekly">
+                            <button type="submit" class="admin-action-btn reject" style="width: 100%;">
+                                Подтвердить сброс
+                            </button>
+                        </form>
+                        <button id="admin-reset-user-weekly-progress-search-btn" type="button" class="admin-menu-button">
+                            <i class="fa-solid fa-search"></i> Найти пользователя
+                        </button>
+                    </div>
                     <div class="admin-form" style="gap: 10px;">
                         <button id="reset-all-quests-btn" class="admin-action-btn reject" style="width: 100%;">Сбросить квесты у всех</button>
                         <button id="reset-all-checkpoint-progress-btn" class="admin-action-btn reject" style="width: 100%;">Сбросить награды Чекпоинта у всех</button>
