--- a/public/admin.html
+++ b/public/admin.html
@@ -849,9 +849,9 @@
                     <label for="weekly-goal-super-prize-desc">Описание Суперприза (видит юзер)</label>
                     <input type="text" name="super_prize_description" id="weekly-goal-super-prize-desc" placeholder="Главный приз!">
 
-                    <button type="submit" class="admin-action-btn approve" style="margin-top: 10px;">Сохранить Настройки</button>
+                    <button type="button" id="save-weekly-settings-btn" class="admin-action-btn approve" style="margin-top: 10px;">Сохранить Настройки</button>
                 </form>
-            </div> 
+            </div>
           <div class="quest-card" style="margin-top: 20px;">
     <div class="user-management-section">
         <h3 style="color: var(--danger-color);"><i class="fa-solid fa-broom"></i> Опасная зона</h3>
