--- a/public/admin.html
+++ b/public/admin.html
@@ -1204,6 +1204,6 @@
     </div>
   
 
-    <script src="admin.js" defer></script>
+    <script src="admin.js?v=1.1" defer></script>
 </body>
 </html>
