--- a/public/admin.html
+++ b/public/admin.html
@@ -913,7 +913,7 @@
                         </select>
                     </div>
 
-                    <button id="save-schedule-btn" type="submit" class="admin-action-btn approve" style="margin-top: 15px;">Сохранить расписание</button>
+                    <button id="save-schedule-btn" type="button" class="admin-action-btn approve" style="margin-top: 15px;">Сохранить расписание</button>
                 </div>
             </form>
         </div>
