--- a/public/events.html
+++ b/public/events.html
@@ -337,7 +337,7 @@
         <i class="fa-solid fa-chevron-left"></i> Назад
     </a>
     <div class="page-header">
-        <h1 class="page-title">Станция Гринда</h1>
+        <h1 class="page-title">Гринд</h1>
     </div>
     <div style="width: 40px;"></div>
   </div>
