--- a/public/menu.html
+++ b/public/menu.html
@@ -78,6 +78,9 @@
         <div id="challenge-container"></div>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
         <div id="quest-choose-wrapper">
+            <button id="shop-open-btn" class="quest-choose-btn-roulette" style="margin-bottom: 12px; background: linear-gradient(135deg, #8E2DE2, #4A00E0); box-shadow: 0 4px 15px rgba(138, 43, 226, 0.4);">
+                <i class="fa-solid fa-cart-shopping"></i> ОТКРЫТЬ МАГАЗИН
+            </button>
             <button id="quest-choose-btn" class="quest-choose-btn-roulette">НАЧАТЬ ИСПЫТАНИЕ</button>
             <div id="quest-choose-container" class="quest-choose-container hidden"></div>
         </div>
