--- a/public/auction.html
+++ b/public/auction.html
@@ -156,23 +156,26 @@
     </div>
 
     <footer class="app-footer">
-        <a href="/menu" class="footer-item"> 
-            <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
-            <span>Главная</span>
-        </a>
-        <a href="/events" class="footer-item">
-            <div class="icon-wrapper"><i class="fa-solid fa-gift"></i></div>
-            <span>Розыгрыши</span>
-        </a>
-        <a href="/auction" class="footer-item active">
-            <div class="icon-wrapper"><i class="fa-solid fa-gavel"></i></div>
-            <span>Аукцион</span>
-        </a>
-        <a href="/profile" class="footer-item">
-            <div class="icon-wrapper"><i class="fa-solid fa-user"></i></div>
-            <span>Профиль</span>
-        </a>
-    </footer>
+    <a href="/leaderboard" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div>
+        <span>Лидерборд</span>
+    </a>
+    <a href="/menu" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
+        <span>Главная</span>
+    </a>
+    <a href="/menu#quests" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
+        <span>Задания</span>
+    </a>
+    <a href="/events" class="footer-item">
+        <div class="icon-wrapper"><i class="fa-solid fa-fire"></i></div> <span>Гринд</span>
+    </a>
+    <a href="/auction" class="footer-item active">
+        <div class="icon-wrapper"><i class="fa-solid fa-gavel"></i></div>
+        <span>Аукцион</span>
+    </a>
+</footer>
 
     <script src="/public/auction.js"></script>
 </body>
