--- a/public/auction.html
+++ b/public/auction.html
@@ -155,21 +155,22 @@
         </div>
     </div>
 
-    <footer class="app-footer">
+     <footer class="app-footer">
     <a href="/leaderboard" class="footer-item">
         <div class="icon-wrapper"><i class="fa-solid fa-trophy"></i></div>
         <span>Лидерборд</span>
     </a>
-    <a href="/menu" class="footer-item"> 
     <a href="/menu#quests" class="footer-item">
         <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
         <span>Задания</span>
     </a>
+        <a href="/menu" class="footer-item">
         <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
         <span>Главная</span>
     </a>
     <a href="/events" class="footer-item">
-        <div class="icon-wrapper"><i class="fa-solid fa-fire"></i></div> <span>Гринд</span>
+        <div class="icon-wrapper"><i class="fa-solid fa-fire"></i></div>
+        <span>Гринд</span>
     </a>
     <a href="/auction" class="footer-item active">
         <div class="icon-wrapper"><i class="fa-solid fa-gavel"></i></div>
