--- a/public/events.html
+++ b/public/events.html
@@ -670,8 +670,9 @@ document.addEventListener('DOMContentLoaded', function() {
 
         // Статические билеты
         const ticketItems = [
-            { type: 'ticket', cost: 4, reward: 1, title: '1 Билет' },
-            { type: 'ticket', cost: 40, reward: 10, title: '10 Билетов' }
+            { type: 'ticket', cost: 3, reward: 1, title: '1 Билет' },
+            { type: 'ticket', cost: 15, reward: 1, title: '5 Билетов' },        
+            { type: 'ticket', cost: 30, reward: 10, title: '10 Билетов' }
         ];
 
         // Динамические промокоды
