--- a/public/menu.html
+++ b/public/menu.html
@@ -78,7 +78,7 @@
         <div id="challenge-container"></div>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
 
-        <button id="shop-open-btn" class="quest-choose-btn-roulette" style="display: none; background: linear-gradient(90deg, #ffcc00, #ff9500); color: #000; margin-bottom: 10px; justify-content: center; align-items: center; gap: 8px;">
+        <button id="shop-open-btn" class="quest-choose-btn-roulette" style="background: linear-gradient(90deg, #ffcc00, #ff9500); color: #000; margin-bottom: 10px; justify-content: center; align-items: center; gap: 8px;">
             <i class="fa-solid fa-cart-shopping"></i> МАГАЗИН
         </button>
 
