--- a/public/shop.html
+++ b/public/shop.html
@@ -247,7 +247,7 @@
                     body: JSON.stringify({ initData: Telegram.WebApp.initData })
                 });
                 const data = await response.json();
-                document.getElementById('user-balance').textContent = data.tickets || 0;
+                document.getElementById('user-balance').textContent = data.bot_t_coins || 0;
             } catch (e) {
                 console.error("Ошибка синхронизации баланса:", e);
             }
